# microtermix

./: .gitignore  BUILD-PORTABLE.md  CLAUDE.md  GEMINI.md  README.md  lib-cipher-1.0.0.tgz  package-lock.json  package.json  test_myers.js  test_myers2.js  vite.config.ts  vitest.config.ts
.atl/: skill-registry.md
.changes/refactor-services-processes/: proposal.md  tasks.md
.claude/: settings.local.json
.github/workflows/: build-mac.yml
.refactor/: baseline.json  config.yml  folder-tree.txt  index.json  module-strategy.json  rules.yml
.refactor/synthesis/: files.json  functional-overview.md  modules.json  project.json
coverage/: index.html
coverage/processes/: index.html  index.ts.html
coverage/services/: cloudwatchApi.ts.html  githubApi.ts.html  gitlabApi.ts.html  index.html  index.ts.html  jenkinsApi.ts.html  tempoApi.ts.html  zeplinApi.ts.html
docs/: WATCHER-SYSTEM.md
docs/plans/: 2026-02-28-tempo-time-log.md  2026-03-01-cloudwatch-panel.md  2026-03-01-git-jira-commit-flow-design.md  2026-03-01-git-jira-commit-flow.md  2026-03-04-crypto-panel-design.md  2026-03-04-crypto-panel.md  2026-03-05-git-zustand-store-design.md  2026-03-05-git-zustand-store.md  2026-03-06-git-multi-account-design.md  2026-03-06-git-multi-account-plan.md  2026-03-06-merge-conflict-modal-design.md  2026-03-06-merge-conflict-modal.md  2026-03-07-git-merge-utility-design.md  2026-03-07-pull-requests-sidebar.md  2026-03-09-git-shadcn-refactor-bugfix.md  2026-03-09-services-terminals-shadcn-implementation.md  2026-03-09-services-terminals-shadcn-refresh-design.md  2026-03-09-tempo-implementation.md  2026-03-09-tempo-time-tracking-design.md  2026-03-10-json-processor-panel.md  2026-03-20-zeplin-integration-design.md
scripts/: copy-portable.js  sync-version.js
src/: App.css  App.tsx  App.tsx-tmp-suffix  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json  test_imara.rs
src-tauri/capabilities/: default.json
src-tauri/notes-md/: test.md
src-tauri/src/: apigateway.rs  app_logs.rs  cloudwatch.rs  crypto.rs  diagnostics.rs  docker.rs  ec2.rs  ecs.rs  file_server.rs  git_diff.rs  git_native.rs  git_watcher.rs  http_client.rs  http_collections.rs  java_manager.rs  json_processor.rs  lambda.rs  lib.rs  main.rs  mock_server.rs  notes.rs  os_utils.rs  processes.rs  projects.rs  proxy.rs  s3.rs  secrets.rs  sigv4.rs  ssm.rs  state.rs  stepfunctions.rs  workspace.rs  workspace_config.rs
src-tauri/src/fileops/: diagrams.rs  mod.rs  reader.rs  writer.rs
src-tauri/src/projects/: env_reader.rs  mod.rs  scanner.rs
src-tauri/src/registry/: crates.rs  go.rs  maven.rs  mod.rs  pypi.rs
src-tauri/src/services/: executor.rs  logs.rs  mod.rs  pipeline.rs  pty.rs
src-tauri/src/system/: mod.rs  process_killer.rs  process_scanner.rs
src-tauri/src/watchers/: github_actions.rs  jenkins.rs  mod.rs
src/components/: AccountManagerModal.tsx  ApiGatewayDetails.tsx  ApiGatewayList.tsx  ApiGatewayPanel.tsx  ApiGatewayTester.tsx  ApiTreeItem.tsx  CloneRepoModal.tsx  CloudWatchPanel.tsx  CommandsPanel.tsx  CommitDiffModal.tsx  CreatePRModal.tsx  CryptoPanel.tsx  EC2Panel.tsx  EnvManager.tsx  FileServerPanel.tsx  GitConfigModal.tsx  GitConflictModal.tsx  GitConflictResolver.tsx  GitConsole.tsx  GitDiffViewer.tsx  GitInitPanel.tsx  GitJiraCommitButton.tsx  GitPanel.tsx  GitSidebar.tsx  GitStagingPanel.tsx  GitTimeline.tsx  GitTimeline.tsx-tmp-fix  GithubPanel.tsx  JdkManagerModal.tsx  JenkinsPanel.tsx  JiraPanel.tsx  LibCipherPanel.tsx  MergeConfirmModal.tsx  MergePRModal.tsx  PRSection.tsx  PipelinesPanel.tsx  ProcessesPanel.tsx  ProjectRow.tsx  ProxyPanel.tsx  PushPreviewModal.tsx  (+17 more)
src/context/: StoreProvider.tsx  WorkspaceContext.tsx
src/git/: index.ts
src/hooks/: useDocker.ts  useEscape.ts  useGithubActionsWatcher.ts  useJenkins.ts  (+6 more)
(+533 files in other folders)
