[package]
name = "microtermix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "microtermix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
imara-diff = { version = "0.2", features = ["unified_diff"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"] }
aws-sdk-cloudwatchlogs = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-ec2 = "1"
aws-sdk-ssm = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
tower = "0.4"
regex = "1"
tauri-plugin-http = "2"
