[package]
name = "microtermix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "microtermix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sysinfo = "0.30"
imara-diff = { version = "0.2", features = ["unified_diff"] }
git2 = { version = "0.19", features = ["vendored-libgit2"] }
auth-git2 = "0.5"
gix = { version = "0.66", default-features = false, features = ["revision", "blob-diff", "worktree-mutation"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"] }
aws-sdk-cloudwatchlogs = "1"
aws-sdk-cloudwatch = "1"
aws-sdk-ec2 = "1"
aws-sdk-ssm = "1"
aws-sdk-apigateway = "1"
aws-sdk-apigatewayv2 = "1"
aws-sdk-sfn = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"
aws-sigv4 = { version = "1", features = ["sign-http"] }
aws-smithy-runtime-api = { version = "1", features = ["client"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
url = "2"
portable-pty = "0.8"
tower = "0.4"
regex = "1"
walkdir = "2"
tar = "0.4"
flate2 = "1.0"
zip = "2.2"
tauri-plugin-http = "2"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
rsa = { version = "0.9", features = ["sha2", "pem"] }
ecies = { version = "0.2", default-features = false, features = ["pure"] }
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
pkcs8 = { version = "0.10", features = ["pem"] }
serde_yaml = "0.9"
quick-xml  = { version = "0.37", features = ["serialize"] }
jsonpath-rust = "0.7"
notify = "8.2.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.29", features = ["signal", "process"], default-features = false }
